Vercel.json cors 설정

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,15 @@
         "src": "/(.*)",
         "dest": "/app.js"
       }
-    ]
+    ],
+    "headers" : [
+      {
+        "source" : "/(.*)",
+        "headers" : [
+          {
+            "key": "Access-Control-Allow-Origin", "value": "*"
+          }
+        ]
+      }
+    ] 
   }
