--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,21 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.js",			
-        "use": "@vercel/node"
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/app.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
       }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/app.js"
-      }
-    ],
-    "headers" : [
-      {
-        "source" : "/(.*)",
-        "headers" : [
-          {
-            "key": "Access-Control-Allow-Origin", "value": "*"
-          } 
-        ]
-      }
-    ] 
-  }
+    }
+  ]
+}
